# antigraviti-trading-bot

./: .gitignore  README.md  config_v21.yaml  config_v3.yaml  config_v4.yaml  config_v5.yaml  deneme_dugun_davetiye.html  generate_report.py  generate_report_all.py  main.py  main_v21.py  main_v3.py  main_v4.py  main_v5.py  pyproject.toml  requirements.txt  run_all.py  send_open_trades.py  setup.py  show_portfolio.py  watch.py  watch_step363.py
.tmp.driveupload/: 141215  141219  141223  141227  141231  141235  141239  141247  141251  141403  141407  141409
docs/: bot_strategy.md
scratch/: analyze_performance.py  analyze_trades.py  analyze_v5_capital_ruin.py  audit_trades.py  backtest_rejected_signals.py  backtest_v21.py  backtest_v3_10_versions.py  backtest_v3_comparison.py  backtest_v3_pa.py  backtest_v5_last_week.py  check_v5_live_signals.py  count_unique_pairs.py  download_15m_advanced.py  find_rejected_signals.py  inspect_rejected_signal.py  run_extensive_optimization.py  run_focused_optimization.py  sweep_thresholds.py  test_ai_live.py  test_oi_funding.py  verify_fibonacci.py  verify_patterns.py
src/: __init__.py
src/config/: settings.py
src/risk/: engine.py
src/strategy/: feature_weights.py  v3_pa_strategy.py  v4_pa_strategy.py  v5_pa_strategy.py
src/technical/: indicators.py
src/utils/: logger.py  telegram_listener.py  telegram_notifier.py
tests/: test_ai_analyzer.py  test_bot_engine.py  test_collector.py  test_execution_engine.py  test_risk_engine.py  test_signal_generator.py  test_technical_engine.py
